--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=revhire
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/revhire
 spring.datasource.username=root
-spring.datasource.password=praveen444
+spring.datasource.password=
 
 
 # Hibernate Configuration
