--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=revhire
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/revhire
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username= root
+spring.datasource.password= jeeva
 
 
 # Hibernate Configuration
