--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,18 @@ spring.application.name=revhire
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/revhire
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=Gu20ru03
 
 
 # Hibernate Configuration
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+# Mail Configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=g.gurumita@gmail.com
+spring.mail.password=ggsmzgpdcpxbydkn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
